--- a/app/src/main/res/layout/activity_new_note.xml
+++ b/app/src/main/res/layout/activity_new_note.xml
@@ -28,7 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/dica"
-                android:maxLength="32"/>
+                android:maxLength="32" android:id="@+id/et_texto"/>
     </android.support.design.widget.TextInputLayout>
 
 
